* ! Repo.branches now returns repo_branch Stream.t
* ! Repo.refs now returns git_ref Stream.t
* ! Tag.get_tags_and_times now returns (string * string) Stream.t
* ! Gist.commits now returns gist_history Stream.t
* ! Gist.list_forks now returns git_fork Stream.t
* ! Organization.teams now returns team Stream.t
* ! Team.repositories now returns repository Stream.t
* ! repo type has been renamed repository
* ! repos type has been renamed repositories
* ! repository_forks field renamed to repository_forks_count
* ! repository_watchers field renamed to repository_stargazers_count
* ! repository_open_issues field renamed to repository_open_issues_count
* ! repository_master_branch field renamed to repository_default_branch
* ! User.repos is now User.repositories
* ! Team.repos is now Team.repositories
* ! repository_description is now optional
* ! release_name is now optional
* ! release_body is now optional
* ! new_release_name is now optional
* ! new_release_body is now optional
* ! branch_user is now optional
* ! user_info_ty field removed in favor of specific user and organization types
* ! user_type type has been removed
* ! team_info_permission is now a variant type instead of a string
* ! team_info_organization is now an org rather than a user
* ! event_org field is now an org option rather than a user
* ! web_hook_config_insecure_ssl is now a bool rather than a string
* ! hook_config is now a hook_config rather than a web_hook_config
* ! new_hook_config is now a hook_config rather than a web_hook_config
* ! update_hook_config is now a hook_config rather than a web_hook_config
* Atdgen >=1.5.0 and Yojson >=1.2.0 are now required for tag_field support
* Cohttp >=0.17.0 is now required for Link header support
* Monad.map, Monad.(>|=), and Monad.embed : 'a Lwt.t -> 'a Monad.t added
* Add Stream module and API.get_stream function for paginated responses (#46)
* `git-jar save` removed after Authorizations API response changes of 2015-04-20