@@ -26,8 +26,8 @@ type rate_limit = {
 
 type scope = [
   | User <json name="user">
-  | UserEmail <json name="user:email">
-  | UserFollow <json name="user:follow">
+  | User_email <json name="user:email">
+  | User_follow <json name="user:follow">
   | Public_repo <json name="public_repo">
   | Repo <json name="repo">
   | Repo_deployment <json name="repo_deployment">
@@ -38,6 +38,7 @@ type scope = [
   | Read_repo_hook <json name="read:repo_hook">
   | Write_repo_hook <json name="write:repo_hook">
   | Admin_repo_hook <json name="admin:repo_hook">
+  | Admin_org_hook <json name="admin:org_hook">
   | Read_org <json name="read:org">
   | Write_org <json name="write:org">
   | Admin_org <json name="admin:org">
